# jabaddon-python-learning

./: README.md
basics/: .gitignore  README.md  pyproject.toml
basics/labs/: Untitled-1.ipynb  api-intro.ipynb  api.ipynb  file-formats.ipynb  gdp-data-extraction-processing.ipynb  web-scrapin.ipynb
basics/resources/: songs.csv
basics/scripts/: conditions_branching.py  dictionaries.py  exceptions.py  functions.py  list_n_tuples.py  loops.py  objects_classes.py  sets.py  strings.py
basics/scripts/files/: files.py
basics/scripts/numpy/: 2d_numpy.py  numpy_basics.py
basics/scripts/pandas/: sales.py  songs.py
basics/scripts/pylint/: sample2.py
basics/src/: __init__.py  mymodule.py  strings.py
basics/src/myproject/: module1.py  module2.py
basics/src/pandas/: song_analyzer.py
basics/tests/: test_mymodule.py  test_strings.py
basics/tests/pandas/: test_song_analyzer.py
basics/tmp/: songs_after_1979.csv
first_flask_app/: .gitignore  pyproject.toml
first_flask_app/src/first_flask_app/: __init__.py  __main__.py  config.py
first_flask_app/src/first_flask_app/routes/: courses.py  health.py  main.py  todo.py
first_flask_app/templates/: sample.html  todo_list.html
function_calling/: .gitignore  book.ipynb  external_tools.ipynb  function_description.json  openapi.json
practice_projects/agent-memory/: pyproject.toml
practice_projects/agent-memory/resumes/: spongebob_squarepants.txt
practice_projects/agent-memory/src/: agentic_rag_n_external_memory.py  building_agent_with_memory.py  editable_mem_basic_impl.py  multiagent_orchestration.py  programming_agent_memory.py
practice_projects/ai-powered-app-image-captioning/: pyproject.toml
practice_projects/ai-powered-app-image-captioning/src/: automate_url_captioner.py  image_captioning_app.py  main.py
practice_projects/ai-powered-app-image-captioning/src/image_captioning_ai/: __init__.py
practice_projects/ai-powered-app-meeting-companion/: pyproject.toml
practice_projects/ai-powered-app-meeting-companion/src/: speech_analyzer.py
practice_projects/ai-powered-app-voice-assistant/: .gitignore  ISSUES.md  pyproject.toml
practice_projects/ai-powered-app-voice-assistant/src/: server.py  worker.py
practice_projects/ai-powered-app-voice-assistant/src/ai_powered_app_voice_assistant/: ibmwatson.py  offline_tts_stt.py  openai.py  semioffline_tts_stt.py
practice_projects/ai-powered-app-voice-assistant/static/: script.js  style.css
practice_projects/ai-powered-app-voice-assistant/templates/: index.html
practice_projects/ai-powered-career-coach/: .gitignore  pyproject.toml
practice_projects/ai-powered-career-coach/src/: llm_chat.py  simple_cloud_llm.py  simple_llm.py  simple_llm_stream.py
practice_projects/ai-powered-chatbot-with-your-data/: .gitignore  README.md  pyproject.toml
practice_projects/ai-powered-chatbot-with-your-data/src/: script.py  worker.py
practice_projects/beeai-intro/: pyproject.toml
practice_projects/beeai-intro/src/: first_agent.py  first_chat.py  first_custom_tool.py  human_in_the_loop.py  multiagent_travel_planner.py  prompt_templates.py  react_agent.py  reasoning.py  requirements.py  structured_output.py  tool_calling.py
practice_projects/crewai-101-multiagent-ai-systems/: pyproject.toml
practice_projects/crewai-101-multiagent-ai-systems/src/: script.py
practice_projects/crewai-agent-tools-vs-task-tools/: pyproject.toml
practice_projects/crewai-agent-tools-vs-task-tools/src/: script_agents.py  script_tasks.py  script_tools.py
practice_projects/crewai-structured-meal-n-groocery-planner/: meals.json  pyproject.toml  shopping_guide.md  shopping_list.json
practice_projects/crewai-structured-meal-n-groocery-planner/src/: agents.py  leftover.py  models.py  script.py  script_meal_planner.py  script_test_models.py  script_two_agent_grocery.py  tasks.py
practice_projects/langgraph-101/: pyproject.toml
practice_projects/langgraph-101/src/: script.py
practice_projects/llm-tool-calls-pydantic-json/: pyproject.toml
practice_projects/llm-tool-calls-pydantic-json/src/: script.py
practice_projects/multi-agent-rag-system-docchat/: .env.example  MIGRATION.md  pyproject.toml
practice_projects/multi-agent-rag-system-docchat/src/: app.py
practice_projects/multi-agent-rag-system-docchat/src/multi_agent_rag_system_docchat/agents/: __init__.py  relevance_checker.py  research_agent.py  verification_agent.py  workflow.py
practice_projects/multi-agent-rag-system-docchat/src/multi_agent_rag_system_docchat/config/: __init__.py  constants.py  settings.py
practice_projects/multi-agent-rag-system-docchat/src/multi_agent_rag_system_docchat/document_processor/: __init__.py  file_handler.py
practice_projects/multi-agent-rag-system-docchat/src/multi_agent_rag_system_docchat/retriever/: __init__.py  builder.py
practice_projects/multi-agent-rag-system-docchat/src/tests/: test1.py
practice_projects/react-agents-langgraph/: pyproject.toml
practice_projects/react-agents-langgraph/src/: graph_script.py  script.py
practice_projects/react-agents-langgraph/src/react_agents_langgraph/: __init__.py  agent_state.py  chains.py  llm.py  prompts.py  tools.py
practice_projects/reflexion-agent-with-external-knowledge/: pyproject.toml
practice_projects/reflexion-agent-with-external-knowledge/src/: script.py  test_components.py  test_graph.py
practice_projects/reflexion-agent-with-external-knowledge/src/reflexion_agent_with_external_knowledge/: __init__.py  chains.py  graph.py  llm.py  models.py  prompts.py  tools.py
practice_projects/simple-chatbot/: .gitignore  pyproject.toml  requests.http
practice_projects/simple-chatbot/src/: app.py  script.py
practice_projects/simple-chatbot/src/simple_chatbot/: __init__.py  chatbot.py
practice_projects/simple-chatbot/src/static/: script.js
practice_projects/workflow-patterns-langchain/: pyproject.toml
practice_projects/workflow-patterns-langchain/src/: Build LangGraph Design Patterns Orchestration Evaluation.ipynb  script_exercise.py  script_parallelization.py  script_prompt_chaining.py  script_routing.py
pyhton/: if.py  len.py  (+2 more)
(+38 files in other folders)
