[tool.poetry]
name = "python-learning-basics"
version = "0.1.0"
description = "Basic Python learning exercises"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
nba_api = "^1.4.1"
lxml = "^5.0.0"
pandas = "^2.3.2"
numpy = "^2.3.0"
matplotlib = "^3.10.5"
ipykernel = "^6.30.1"
beautifulsoup4 = "^4.12.0"
requests = "^2.31.0"
randomuser = "^1.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"
ipykernel = "^6.30.1"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
