[project]
name = "ai-powered-app-meeting-companion"
version = "0.1.0"
description = ""
authors = [
    {name = "Rafael Gutierrez",email = "abadon.gutierrez@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "transformers (>=4.57.1,<5.0.0)",
    "torch (>=2.9.1,<3.0.0)",
    "gradio (>=5.49.1,<6.0.0)",
    "langchain (>=1.0.5,<2.0.0)",
    "openai (>=2.8.0,<3.0.0)",
    "huggingface-hub (>=0.36.0,<1.0)",
    "langchain-openai (>=1.0.2,<2.0.0)"
]

[tool.poetry]
packages = [{include = "ai_powered_app_meeting_companion", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
