[project]
name = "beeai-intro"
version = "0.1.0"
description = ""
authors = [
    {name = "Rafael Gutierrez",email = "abadon.gutierrez@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "openai (>=2.7.2,<3.0.0)",
    "beeai-framework[wikipedia] (>=0.1.65,<0.2.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "pydantic-core (>=2.41.5,<3.0.0)"
]

[tool.poetry]
packages = [{include = "beeai_intro", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
