[project]
name = "crewai-agent-tools-vs-task-tools"
version = "0.1.0"
description = ""
authors = [
    {name = "Rafael Gutierrez",email = "abadon.gutierrez@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "crewai[google-genai] (>=1.3.0,<2.0.0)",
    "crewai-tools (>=1.3.0,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-huggingface (>=1.0.1,<2.0.0)",
    "sentence-transformers (>=5.1.2,<6.0.0)",
    "qdrant-client (>=1.15.1,<2.0.0)",
]

[tool.poetry]
packages = [{include = "crewai_agent_tools_vs_task_tools", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
