[project]
name = "crewai-structured-meal-n-groocery-planner"
version = "0.1.0"
description = ""
authors = [
    {name = "Rafael Gutierrez",email = "abadon.gutierrez@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "langchain (>=1.0.3,<2.0.0)",
    "crewai[google-genai]>=1.3.0,<2.0.0",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-openai (>=1.0.2,<2.0.0)",
    "duckduckgo-search (>=8.1.1,<9.0.0)",
    "crewai-tools (>=1.3.0,<2.0.0)",
    "databricks-sdk (>=0.72.0,<0.73.0)",
]

[tool.poetry]
packages = [{include = "crewai_structured_meal_n_groocery_planner", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
