[project]
name = "multi-agent-rag-system-docchat"
version = "0.1.0"
description = ""
authors = [
    {name = "Rafael Gutierrez",email = "abadon.gutierrez@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "docling (>=2.58.0,<3.0.0)",
    "langgraph (>=1.0.1,<2.0.0)",
    "chromadb (>=1.2.2,<2.0.0)",
    "langchain (>=1.0.2,<2.0.0)",
    "gradio (>=5.49.1,<6.0.0)",
    "langchain-openai (>=1.0.1,<2.0.0)",
    "langchain-text-splitters (>=1.0.0,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "pypdf (>=6.1.3,<7.0.0)",
    "openai (>=1.0.0,<2.0.0)",
    "rank-bm25 (>=0.2.2,<0.3.0)"
]

[tool.poetry]
packages = [{include = "multi_agent_rag_system_docchat", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
