[project]
name = "reflexion-agent-with-external-knowledge"
version = "0.1.0"
description = ""
authors = [
    {name = "Rafael Gutierrez",email = "abadon.gutierrez@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "langchain-openai (>=1.0.1,<2.0.0)",
    "langchain (>=1.0.2,<2.0.0)",
    "openai (>=2.6.0,<3.0.0)",
    "langchain-community (>=0.4,<0.5)",
    "langchain-tavily (>=0.2.12,<0.3.0)"
]

[tool.poetry]
packages = [{include = "reflexion_agent_with_external_knowledge", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
